# BAISYS_QUANT

./: .gitignore  CHANGELOG.md  ConfigParser.py  DataValidator.py  FEATURES_Smart_Resume_Incremental_Update.md  FEATURES_断点续传与增量更新.md  HistDataEngine.py  MACDAnalyzer.py  MainShareAnalysis.py  PostgreSQL建表语句.sql  README.md  SW_Industry_Factor_Report_Test.xlsx  SignalManager.py  StockAnalysisCoordinator.py  backtest_drift.json  calibration_result.json  check_code.py  config.ini  debug_technical_indicators.py  pyproject.toml  requirements.txt  run_first_pass.ps1  run_output.txt  sensitivity_runner.py  simple_test.py  stock_info_global_em.txt  sw_index_third_info_df.xlsx  test.py  test_config_wiring.py  test_kline_history_days.py  test_research_report_filter.py  verify_config.py  verify_config_fixed.py  示例 - 复盘报告-20260623.xlsx
.arts/: settings.json
.opencode/: summary.md
Backtesting/: README.md  __init__.py  _engine_legacy.py  akquant_strategy.py  alert.py  analytics.py  calibration.py  calibration_log.py  data_provider.py  engine.py  factors.py  overfitting.py  portfolio.py  prepare.py  runner.py  strategy.py  sync.py
DataCollection/: CalendarManager.py  ChipDistributionFetcher.py  FinancialForecastFetcher.py  GetStockBasicinfo.py  HistDataEngine.py  MoneyFlowFetcher.py  __init__.py  asharehub_industries.parquet  test_asharehub_industry.py
DataManager/: ColumnNames.py  ConfigParser.py  DataFetcher.py  DataMergeService.py  DataProcessingService.py  DataSchemas.py  DatabaseWriter.py  DbEngine.py  HistDataEngine.py  IncrementalSyncEngine.py  KlineAdjuster.py  ParallelUtils.py  Parse_Currency.py  QuantDataPerformer.py  ReportService.py  ShareCodeFormatMgr.py  SignalDataLoader.py  _fetch_one.py  test_split.py
LogicAnalyzer/: AnalysisService.py  DataAcquisitionService.py  DataValidator.py  Distribution.py  FullBullScorer.py  FundMomentumAnalyzer.py  Indicators.py  Industrytrending.py  KDJAnalyzer.py  MACDAnalyzer.py  MACDDivergence.py  MacroFilter.py  Pipeline.py  PipelineScoring.py  PipelineState.py  PositionSizer.py  ProfessionalIndicators.py  ScoringRules.py  SignalConstants.py  SignalManager.py  StockAnalysisCoordinator.py
TreasureBox/: KDJ_Signal.py  (+4 more)
(+50 files in other folders)
